Fixed the rows margins splitting up on firefox

--- a/css/search.css
+++ b/css/search.css
@@ -39,3 +39,8 @@
 	border: 1px solid white;
 	height: 150px;
 }
+
+#moe {
+	margin-right: 0px;
+	margin-left: 0px; 
+}
